# dahlia

./: .gitignore  .hook.yaml  .sbt-hydra-history  .scalafmt.conf  2mm.futil  Dockerfile  LICENSE  Makefile  README.md  TODO.org  array-access.rkt  build.sbt  dune-workspace  fuse  index_static_access.ss  runt.toml  seashell.opam  try  try.fuse
.circleci/: config.yml
buildbot/: .gitignore  Dockerfile  Makefile  Pipfile  README.md  buildbot.base.cfg  buildbot.py  package.json
demo/: index-template.html  index.html  index.js  package.json  style.css
docs/: .gitignore  Makefile  README.md  appendix.md  array-access-visualizer.md  banking.md  binders.md  capabilities.md  cheat.md  cli-compile.md  combine.md  cpp-runnable.md  demo.html  extra.css  footer.html  header.html  headers.md  hwtute-01.md  hwtute-intro.md  imports.md  index.md  indextype.md  indextype_multid.md  install.md  literals.md  logicalmemoryaccess.md  modd.conf  multidimensional.md  overview.md  seashellintro.md  spatial.md  testing.md  (+4 more)
test/: array.ss  array_access0.ss  array_access1.ss  assignment.ss  bools0.ss  bools1.ss  conditional.ss  dune  explicit_bank_access0.ss  explicit_bank_access1.ss  for.ss  functions.ss  highest_array_sum.ss  illegal_ops.ss  implicit_array_access.ss  insertion_sort.ss  jbuild  limit_array_access.ss  multiple_arrays.ss  non_static_bank_access0.ss  safe_array_access.ss  selection_sort.ss  test.ml  test_programs.ml  test_utils.ml  type_failures.ml  type_test.ml
test/should-compile/: ap_ints.sea  bignums.sea  logical_access.sea  mdview.sea  multaccess.sea  simpleview.sea  view2.sea  view3.sea  view4.sea  view5.sea  vsadd_nrl.sea  vsadd_nrl_typedefs.sea
test/skip/: convolution.sea  illegal_op.sea  matadd_1dfullnrl.sea
(+539 files in other folders)
