opam-version: "2.0"
name: "seashell"
version: "0.0.1"
maintainer: "Rachit Nigam <rachit.nigam12@gmail.com>"
author: "Rachit Nigam <rachit.nigam12@gmail.com>"
homepage: "https://github.com/cucapra/seashell"
bug-reports: "https://github.com/cucapra/seashell/issues"
dev-repo: "git+https://github.com/cucapra/seashell.git"
build: [ "dune" "build" ]
install: [ "dune" "install" ]
remove: ["ocamlfind" "remove" "project"]
depends: [
  "dune" {>= "1.2.0"}
  "menhir"
  "core"
  "ppx_deriving"
  "ppx_expect"
  "cmdliner"
]
